# cookiecutter-basic-data-science

./: LICENSE  README.md  cookiecutter.json
hooks/: post_gen_project.sh
{{ cookiecutter.__project_slug }}/: .coveragerc  .env  .gitignore  .pre-commit-config.yaml  Makefile  Pipfile  README.md  mypy.ini  pyproject.toml  setup.cfg  setup.py
