[tool.poetry]
name = "src"
version = "0.1.0"
description = "{{ cookiecutter.description }}"
authors = ["{{ cookiecutter.author_name }}"]

[tool.poetry.dependencies]
python = "^3.8"
jupyterlab = "*"

[tool.poetry.dev-dependencies]
# Only >= 6.0 supports configuration within pyproject.toml
pytest = ">= 6.0"
# Wildcard version matching doesn't work with black's version format
black = "^20.8b1"
flake8 = "*"
isort = "*"
mypy = "*"
pre-commit = "*"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.isort]
# From https://black.readthedocs.io/en/stable/compatible_configs.html#isort
multi_line_output = 3
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
use_parentheses = true
line_length = 88

[flake8]
# From https://black.readthedocs.io/en/stable/compatible_configs.html#flake8
max-line-length = 88
extend-ignore = "E203"
