[tool.poetry]
name = "src"
version = "0.1.0"
description = "{{ cookiecutter.description }}"
authors = ["{{ cookiecutter.author_name }}"]

[tool.poetry.dependencies]
python = "^3.8"
jupyterlab = "*"

[tool.poetry.dev-dependencies]
# Only >= 6.0 supports configuration within pyproject.toml
pytest = ">= 6.0"
# Wildcard version matching doesn't work with black's version format
black = "^20.8b1"
flake8 = "*"
isort = "*"
mypy = "*"
pre-commit = "*"
pytest-cov = "*"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
